# nix

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindBrotli.cmake  FindEditline.cmake  FindLibgit2.cmake  Findcpuid.cmake  Findlowdown.cmake  Findsodium.cmake  generate_file.cmake  message_macros.cmake  system.cmake  version.cmake
src/: CMakeLists.txt
src/build-remote/: CMakeLists.txt
src/libcmd/: CMakeLists.txt
src/libexpr/: CMakeLists.txt  print.cc
src/libexpr/tests/: CMakeLists.txt
src/libfetchers/: CMakeLists.txt  fetchers.cc  git-utils.cc  git.cc  github.cc
src/libmain/: CMakeLists.txt
src/libstore/: CMakeLists.txt  compile-defined-variables.h.in  derivations.cc  globals.hh  sql-statements.h.in
src/libutil/: CMakeLists.txt  archive.cc  error.cc  git.cc  git.hh  json-utils.hh
src/libutil/tests/: git.cc
src/nix/: CMakeLists.txt  build.cc  hash.cc
src/nix-build/: CMakeLists.txt
src/nix-channel/: CMakeLists.txt
src/nix-collect-garbage/: CMakeLists.txt
src/nix-copy-closure/: CMakeLists.txt
src/nix-env/: CMakeLists.txt
src/nix-instantiate/: CMakeLists.txt
src/nix-store/: CMakeLists.txt  nix-store.cc
src/resolve-system-dependencies/: CMakeLists.txt  resolve-system-dependencies.cc
src/toml11/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp
