add_subdir_with_message(build-remote)
add_subdir_with_message(libcmd)
add_subdir_with_message(libfetchers)
add_subdir_with_message(libstore)
add_subdir_with_message(nix)
add_subdir_with_message(nix-channel)
add_subdir_with_message(nix-copy-closure)
add_subdir_with_message(nix-instantiate)
add_subdir_with_message(libexpr)
add_subdir_with_message(libmain)
add_subdir_with_message(libutil)
add_subdir_with_message(nix-build)
add_subdir_with_message(nix-collect-garbage)
add_subdir_with_message(nix-env)
add_subdir_with_message(nix-store)
add_subdir_with_message(toml11)


if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    add_subdirectory(resolve-system-dependencies)
endif()